--- a/site.css
+++ b/site.css
@@ -8,3 +8,9 @@
   grid-template-columns: 1fr 3fr;
   grid-gap: 1rem;
 }
+
+.code {
+  background: #f1f3f4;
+  padding: 23px 23px 23px 23px;
+  border-radius: 14px;
+}
