--- a/site.css
+++ b/site.css
@@ -14,3 +14,9 @@
   padding: 23px 23px 23px 23px;
   border-radius: 14px;
 }
+
+.button {
+  display: flex;
+  align-items: center;
+  gap: .3rem;
+}
